@@ -31,6 +31,7 @@ namespace Text
 		void AppendStr(Text::CStringNN val);
 		void AppendStrUTF8(const UTF8Char *val);
 		void AppendStrW(const WChar *val);
+		void AppendDouble(Double val);
 		void AppendTSStr(Data::Timestamp ts);
 		void AppendDateStr(Data::Date dat);
 		void AppendCoord2D(Math::Coord2DDbl coord);
